feat: render header

--- a/src/app/components/header-login/header-login.component.html
+++ b/src/app/components/header-login/header-login.component.html
@@ -1,1 +1,2 @@
-<p>header-login works!</p>
+<span class="user-title">{{userTitle}}</span>
+<img src="../../../assets/Subtract.png" alt="login" width="19px" height="19px" style="cursor: pointer;">
