--- a/src/app/components/header-settings-btn/header-settings-btn.component.html
+++ b/src/app/components/header-settings-btn/header-settings-btn.component.html
@@ -1,1 +1,1 @@
-<p>header-settings-btn works!</p>
+<img src="../../../assets/search_settings.png" alt="settings-btn" style="width:24px;height:24px;cursor: pointer;">
