--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<div class="header-container">
+  <app-header-logo></app-header-logo>
+  <app-header-search-input-with-btn></app-header-search-input-with-btn>
+  <app-header-settings-btn></app-header-settings-btn>
+  <app-header-login></app-header-login>
+</div>
