feat: render filter and sort-item

--- a/src/app/components/filter/filter.component.html
+++ b/src/app/components/filter/filter.component.html
@@ -1,1 +1,5 @@
-<p>filter works!</p>
+<div class="filter-container">
+  <span class="filter-title">Sorting by:</span>
+  <app-filter-sort-buttons></app-filter-sort-buttons>
+  <app-filter-sort-input></app-filter-sort-input>
+</div>
