--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -7,3 +7,17 @@
   justify-content: center;
   align-items: center;
 }
+
+.filter-container {
+  display: flex;
+  flex-direction: row;
+  width: 500px;
+  height: 14px;
+}
+
+.filter-title {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #929292;
+}
