--- a/src/app/components/header-search-input-with-btn/header-search-input-with-btn.component.html
+++ b/src/app/components/header-search-input-with-btn/header-search-input-with-btn.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="fill">
-  <input matInput style="width:396px;height:24px;background-color:#EFEFEF">
+  <input matInput >
 </mat-form-field>
 <button mat-button
   style="width:80px;height:24px;background:#2F80ED;color:#FFFFFF;display:flex;justify-content:center;align-items:center;">Search</button>
