--- a/src/app/components/header-search-input-with-btn/header-search-input-with-btn.component.scss
+++ b/src/app/components/header-search-input-with-btn/header-search-input-with-btn.component.scss
@@ -18,3 +18,15 @@
 :host ::ng-deep .mat-form-field-infix{
  width:auto;
 }
+
+#mat-input-0{
+  width:396px;
+  height:24px;
+  background-color:#EFEFEF;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  color: #929292;
+}
