--- a/src/app/components/search-result-item/search-result-item.component.html
+++ b/src/app/components/search-result-item/search-result-item.component.html
@@ -1,1 +1,28 @@
-<p>search-result-item works!</p>
+<mat-card class="example-card">
+  <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"
+    style="width:223px;height:123px;">
+  <div class="stat-container">
+    <div>
+      <img src="../../../assets/viewed.png">
+      {{viewsCount}}
+    </div>
+    <div>
+      <img src="../../../assets/liked.png">
+      {{likesCount}}
+    </div>
+    <div>
+      <img src="../../../assets/dislike.png">
+      {{dislikesCount}}
+    </div>
+    <div>
+      <img src="../../../assets/Group 9.png">
+      {{commentsCount}}
+    </div>
+  </div>
+  <mat-card-header>
+    <mat-card-title>{{videoTitle}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button >more...</button>
+  </mat-card-actions>
+</mat-card>
