--- a/src/app/components/search-result/search-result.component.scss
+++ b/src/app/components/search-result/search-result.component.scss
@@ -1,7 +1,7 @@
 :host {
   width: 100vw;
   max-width: 1200px;
-  background: #EEEEEE;
+  background: #FFFFFF;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
