--- a/src/app/components/search-result/search-result.component.html
+++ b/src/app/components/search-result/search-result.component.html
@@ -1,1 +1,8 @@
-<app-search-result-item></app-search-result-item>
+
+    <app-search-result-item *ngFor="let item of searchItemsArr"  [viewCount]="item.statistics.viewCount"
+    [likeCount]="item.statistics.likeCount" [dislikeCount]="item.statistics.dislikeCount"
+    [commentCount]="item.statistics.commentCount" [title]="item.snippet.title"
+    [srcImg]="item.snippet.thumbnails.default.url">
+    </app-search-result-item>
+
+
