feat: filter as toggle element

--- a/src/app/components/header/header-search-input-with-btn/header-search-input-with-btn.component.scss
+++ b/src/app/components/header/header-search-input-with-btn/header-search-input-with-btn.component.scss
@@ -17,14 +17,12 @@
 
 }
 
+:host ::ng-deep .mat-form-field-infix{
+ width:auto;
+ padding: 0;
+}
 
-
-// :host ::ng-deep .mat-form-field-infix{
-//  width:auto;
-//  padding: 0;
-// }
-
-#mat-input-0{
+.mat-input-element{
   width:396px;
   height:24px;
   background-color:#EFEFEF;
