--- a/src/app/components/header/header-settings-btn/header-settings-btn.component.html
+++ b/src/app/components/header/header-settings-btn/header-settings-btn.component.html
@@ -1,1 +1,3 @@
-<img src="../../../assets/search_settings.png" alt="settings-btn" style="width:24px;height:24px;cursor: pointer;">
+<button (click)="toggleFilter()">
+  <img src="../../../assets/search_settings.png" alt="settings-btn" style="width:24px;height:24px;cursor: pointer;">
+</button>
