--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header>
+<app-header (toggleFilterFlag)="toggleFilter($event)">
 </app-header>
-<app-filter></app-filter>
+<app-filter *ngIf="toggleFilterFlag"></app-filter>
 <app-search-result></app-search-result>
