--- a/src/app/components/filter/filter-sort-buttons/filter-sort-buttons.component.html
+++ b/src/app/components/filter/filter-sort-buttons/filter-sort-buttons.component.html
@@ -1,2 +1,2 @@
-<button mat-button>date</button>
-<button mat-button>count of views</button>
+<button mat-button (click)="sortData()">date</button>
+<button mat-button (click)="sortCount()">count of views</button>
