--- a/src/app/components/filter/filter-sort-input/filter-sort-input.component.html
+++ b/src/app/components/filter/filter-sort-input/filter-sort-input.component.html
@@ -1,2 +1,2 @@
 <span class="input-title">by word or sentance</span>
-<input matInput >
+<input matInput [(ngModel)]="filterPattern" (ngModelChange)="onModelChange()">
