feat: add styleitemdatederective to render item date difference

--- a/src/app/components/search-result/search-result-item/search-result-item.component.scss
+++ b/src/app/components/search-result/search-result-item/search-result-item.component.scss
@@ -1,15 +1,15 @@
 :host {
-  width: auto;
-  height: auto;
+  width: 263px;
+  height: 327px;
+  margin: 30px 15px 0 15px;
 }
 
 .example-card {
-  width: 263px;
-  height: 327px;
+  width: 100%;
+  height: 100%;
   padding: 20px;
   background: #E5E5E5;
   border-radius: 5px;
-  margin: 30px 15px 0 15px;
 }
 
 
@@ -80,5 +80,5 @@ top: 20%;
 .mat-card-actions {
   position: absolute;
   left: 30%;
-  bottom: 10%;
+  bottom: 5%;
 }
