fix: fix eslint errors and warnings

--- a/src/app/components/header/header-settings-btn/header-settings-btn.component.html
+++ b/src/app/components/header/header-settings-btn/header-settings-btn.component.html
@@ -1,3 +1,3 @@
-<button (click)="toggleFilter()">
+<button (click)="toggleFilter()" style="width:auto;height:auto;border: none; padding:0;background: transparent;">
   <img src="../../../assets/search_settings.png" alt="settings-btn" style="width:24px;height:24px;cursor: pointer;">
 </button>
