--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <app-header-logo></app-header-logo>
-  <app-header-search-input-with-btn></app-header-search-input-with-btn>
+  <app-search-input-btn></app-search-input-btn>
   <app-header-settings-btn (toggleFilterFlag)="toggleFilter($event)"></app-header-settings-btn>
   <app-header-login></app-header-login>
 </div>
