refactoring: remove inline style in components, empty methods, change if-else block to if-else if style-item-date.directive

--- a/src/app/components/header/header-login/header-login.component.html
+++ b/src/app/components/header/header-login/header-login.component.html
@@ -1,2 +1,2 @@
 <span class="user-title">{{userTitle}}</span>
-<img src="../../../assets/Subtract.png" alt="login" width="19px" height="19px" style="cursor: pointer;">
+<img class="login-img" src="../../../assets/Subtract.png" alt="login">
