--- a/src/app/components/header/search-input-btn/search-input-btn.component.html
+++ b/src/app/components/header/search-input-btn/search-input-btn.component.html
@@ -1,6 +1,4 @@
 <mat-form-field appearance="fill">
   <input matInput [(ngModel)]="searchPattern">
 </mat-form-field>
-<button mat-button
-  style="width:80px;height:24px;background:#2F80ED;color:#FFFFFF;display:flex;justify-content:center;align-items:center;"
-  (click)="onSearch()">Search</button>
+<button mat-button (click)="onSearch()">Search</button>
