--- a/src/app/components/header/header-logo/header-logo.component.html
+++ b/src/app/components/header/header-logo/header-logo.component.html
@@ -1,1 +1,1 @@
-<img src="../../../assets/logo.png" alt="logo" style="margin-right: 10px;">
+<img class="logo-img" src="../../../assets/logo.png" alt="logo" >
