--- a/src/app/components/search-result/search-result-item/search-result-item.component.html
+++ b/src/app/components/search-result/search-result-item/search-result-item.component.html
@@ -1,5 +1,5 @@
 <mat-card class="example-card">
-  <img [src]="srcImg" alt="Photo of a Shiba Inu" style="width:223px;height: 167px;">
+  <img class="card-img" [src]="srcImg" alt="img">
   <div class="stat-container">
     <div class="stat-item">
       <img src="../../../assets/viewed.png">
