feat: add routing and roting-youtube modules, add filter service

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,3 +4,4 @@
   <app-header-settings-btn (toggleFilterFlag)="toggleFilter($event)"></app-header-settings-btn>
   <app-header-login></app-header-login>
 </div>
+<app-filter *ngIf="toggleFilterFlag"></app-filter>
