--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-header (toggleFilterFlag)="toggleFilter($event)">
-</app-header>
-<app-filter *ngIf="toggleFilterFlag" (sendSortDataValue)="catchSortDataValue($event)"
-  (sendSortCountValue)="catchSortCountValue($event)" (sendFilterPattern)="catchFilterPattern($event)"></app-filter>
-<app-search-result [sortDataValue]="sendSortDataValue" [sortCountValue]="sendSortCountValue"
-  [filterPattern]="sendFilterPattern"></app-search-result>
+<app-header></app-header>
+<router-outlet></router-outlet>
