feat: add main, 404, detailed pages

--- a/src/app/youtube/components/search-result/search-result.component.html
+++ b/src/app/youtube/components/search-result/search-result.component.html
@@ -3,5 +3,5 @@
   [appStyleItemDate]="item.snippet.publishedAt" [viewCount]="item.statistics.viewCount"
   [likeCount]="item.statistics.likeCount" [dislikeCount]="item.statistics.dislikeCount"
   [commentCount]="item.statistics.commentCount" [title]="item.snippet.title"
-  [srcImg]="item.snippet.thumbnails.default.url">
+  [srcImg]="item.snippet.thumbnails.default.url" [id]="item.id">
 </app-search-result-item>
