--- a/src/app/youtube/components/search-result/search-result-item/search-result-item.component.html
+++ b/src/app/youtube/components/search-result/search-result-item/search-result-item.component.html
@@ -22,6 +22,8 @@
     <mat-card-title>{{title}}</mat-card-title>
   </mat-card-header>
   <mat-card-actions>
-    <button mat-button>more...</button>
+    <a [routerLink]="['/main/information',id]">
+      <button mat-button>more...</button>
+    </a>
   </mat-card-actions>
 </mat-card>
