--- a/src/app/youtube/pages/detailed/detailed.component.html
+++ b/src/app/youtube/pages/detailed/detailed.component.html
@@ -1,1 +1,31 @@
-<p>detailed works!</p>
+<div class="detailed-container">
+  <a [routerLink]="['/main']"><button mat-raised-button color="primary"><img src="../../../../assets/arrow.png"
+        alt="back"></button></a>
+  <img [src]="srcImg" alt="">
+  <div class="detailed-summary" [appStyleItemDate]="itemPublishDate">
+    <div class="detailed-top">
+      <h1>{{title}}</h1>
+      <h2>{{itemPublishDate}}</h2>
+    </div>
+    <h3>Description</h3>
+    <p class="detailed-description">{{description}}</p>
+    <div class="stat-container">
+      <div class="stat-item">
+        <img src="../../../assets/viewed.png">
+        {{viewCount}}
+      </div>
+      <div class="stat-item">
+        <img src="../../../assets/liked.png">
+        {{likeCount}}
+      </div>
+      <div class="stat-item">
+        <img src="../../../assets/dislike.png">
+        {{dislikeCount}}
+      </div>
+      <div class="stat-item">
+        <img src="../../../assets/Group 9.png">
+        {{commentCount}}
+      </div>
+    </div>
+  </div>
+</div>
