--- a/src/app/core/components/header/header-login/header-login.component.html
+++ b/src/app/core/components/header/header-login/header-login.component.html
@@ -1,2 +1,4 @@
 <span class="user-title">{{userTitle}}</span>
 <img class="login-img" src="../../../assets/Subtract.png" alt="login">
+<button mat-flat-button color="primary" (click)="logout()" *ngIf="isLogin">logout</button>
+<button mat-flat-button color="primary" *ngIf="!isLogin">login</button>
