--- a/src/app/core/components/header/header-login/header-login.component.scss
+++ b/src/app/core/components/header/header-login/header-login.component.scss
@@ -1,10 +1,8 @@
 :host {
   margin-left: 150px;
-  width: 100px;
-  height: 24px;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -16,7 +14,18 @@
 }
 
 .login-img {
+  margin-left: 5px;
   width: 19px;
   height: 19px;
   cursor: pointer;
+}
+
+.mat-flat-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+  width: auto;
+  height: 19px;
+  background-color: #2F80ED;
 }
