--- a/src/app/youtube/components/search-result/search-result-item/search-result-item.component.html
+++ b/src/app/youtube/components/search-result/search-result-item/search-result-item.component.html
@@ -22,7 +22,7 @@
     <mat-card-title>{{title}}</mat-card-title>
   </mat-card-header>
   <mat-card-actions>
-    <a [routerLink]="['/main/information',id]">
+    <a [routerLink]="['/main/video',id]">
       <button mat-button>more...</button>
     </a>
   </mat-card-actions>
