feat: remove search-btn and add observble to input component with filre and debounceTime rxjs operators

--- a/src/app/core/components/header/search-input-btn/search-input-btn.component.html
+++ b/src/app/core/components/header/search-input-btn/search-input-btn.component.html
@@ -1,4 +1,3 @@
 <mat-form-field appearance="fill">
-  <input matInput [(ngModel)]="searchPattern">
+  <input matInput [formControl]="textControl">
 </mat-form-field>
-<button mat-button (click)="onSearch()">Search</button>
