feat: add admin page

--- a/src/app/core/components/header/header-logo/header-logo.component.html
+++ b/src/app/core/components/header/header-logo/header-logo.component.html
@@ -1,1 +1,1 @@
-<img class="logo-img" src="../../../assets/logo.png" alt="logo" >
+<a [routerLink]="['/admin']"><img class="logo-img" src="../../../assets/logo.png" alt="logo"></a>
