feat: add selector for card and card component

--- a/src/app/core/pages/admin-page/admin-page.component.html
+++ b/src/app/core/pages/admin-page/admin-page.component.html
@@ -16,6 +16,8 @@
     <mat-label>Link video</mat-label>
     <input matInput [(ngModel)]="linkVideo">
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="creatCard">Creat card</button>
+  <div class="container-btn">
+    <a [routerLink]="['/main']"><button mat-stroked-button color="warn">Cancele</button></a>
+    <button mat-raised-button color="primary" (click)="creatCard()">Creat card</button>
+  </div>
 </div>
-
