--- a/src/app/core/pages/admin-page/admin-page.component.scss
+++ b/src/app/core/pages/admin-page/admin-page.component.scss
@@ -16,6 +16,13 @@
   padding: 20px;
 }
 
+.container-btn{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .mat-raised-button{
   background-color: #2F80ED;
 }
