--- a/src/app/youtube/components/search-result/search-result.component.html
+++ b/src/app/youtube/components/search-result/search-result.component.html
@@ -1,3 +1,5 @@
+<app-card *ngFor="let card of (cardDataArr$ | async)!;index as id" [id]="id" [title]="card.title" [img]="card.img">
+</app-card>
 <app-search-result-item
   *ngFor="let item of (searchItemsArr | async)! | filter: (filterPattern | async)! | dataSort: (sortDataValue | async)! | countSort: (sortCountValue | async)!"
   [appStyleItemDate]="item.snippet.publishedAt" [commentCount]="item.statistics.commentCount"
